Fix header spacing in maniphest
Summary: I missed this case when updating spacing on blank headers.

Test Plan: reload maniphest page with and without tasks.

Reviewers: epriestley, btrahan

Reviewed By: epriestley

CC: aran, Korvin

Differential Revision: https://secure.phabricator.com/D4622

--- a/webroot/rsrc/css/application/maniphest/task-summary.css
+++ b/webroot/rsrc/css/application/maniphest/task-summary.css
@@ -132,6 +132,10 @@
   margin-left: 20px;
 }
 
+.aphront-panel-view .maniphest-task-group-header {
+  margin-left: 0;
+}
+
 .maniphest-total-result-count {
   text-align: right;
   padding-right: 2em;
